--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://static-00.iconduck.com/assets.00/web-developer-illustration-2005x2048-fal2biag.png" alt="photo" height=300px>
+	<h1>Namrata Srivastava</h1>
+	<a href="https://www.linkedin.com/in/namrata-srivastava-4550111b9/">LinkedIn</a>
+	<section id="skills">
+		<p>Java</p>
+		<p>Web development</p>
+	</section>
+	<section id="projects">
+		<ul>
+			<li>Spotify clone</li>
+			<li>Blinkit clone</li>
+			<li>Apple clone</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
